Sample Registration APIs - commit